tests/compile/userdata_generic_impl.stderr
error: `#[mlua::userdata_impl]` does not support generic impl blocks.
 --> tests/compile/userdata_generic_impl.rs:7:5
  |
7 | impl<T> Foo<T> {
  |     ^^^
